deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springapp-deployments
  labels:
    app: spring
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - name: springboot-app
        image: udhayakumar124/springboot_project
        ports:
        - containerPort: 9090
        
---

apiVersion: v1
kind: Service
metadata:
  name: my-springapp-service
spec:
  type: NodePort
  selector:
    app: spring
  ports:
     - port: 9090
       targetPort: 9090
       nodePort: 31000
