service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-springapp-service
spec:
  type: NodePort
  selector:
    app: spring
  ports:
     - port: 9090
       targetPort: 9090
       nodePort: 31000
